# lib/api-spec/openapi.yaml
@@ -175,6 +175,10 @@ paths:
           in: query
           schema:
             type: integer
+        - name: staff_user_id     # ← new
+          in: query
+          schema:
+          type: integer
         - name: search
           in: query
           schema:
